# jaipur-de-project

./: .gitignore  pyproject.toml
.github/scripts/: fallback-email-notify.html  notify-on-merge.html  send_email.py
.github/workflows/: ci-cd.yml  notify-on-merge.yml  notify-on-schedule.yml  test.yml
alexandria/: SPCS.md  SPCS_Implement.md  Snowpark_CS.md  certification.md  dbt-best-pratices.md  dbt.md  oauth.md  permifrost.md  snow_cert  snowconvert.md  snowpro_cert.md  worflow_testing_2.md  workflow_testing.md  workflow_testing_1.md
dbt/: .gitignore
dbt/.github/workflows/: ci-cd.yml
dbt/models/marts/: sales_metrics_by_location.py
dbt/models/marts/core/: dim_truck.sql  dim_truck.yml  dim_trucks.sql
dbt/models/staging/: __sources.yml
dg/: assets.py  definitions.py  schedules.py
