[project]
name = "jaipur-de-end-to-end-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dbt-snowflake>=1.9.4",
    "dagster",
    "dagster-dbt",
    "dagster-webserver",
]

[build-system]
requires = ["uv_build>=0.8.3,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "dg"
module-root = ""

[tool.dagster]
module_name = "dg.definitions"
